# sozvezdie-backend

./: .env  .env.example  .test.env  Dockerfile  TASK.md  Untitled  docker-compose.yml  entrypoint.sh  mock_data.json  pyproject.toml  run.py  test_data.py
app/: constants.py  settings.py  startup.py
app/api/: api.py  auth_routing.py  exceptions.py
app/api/dependencies/: __init__.py  auth.py  database.py  moderation_access.py  super_moderator.py
app/api/routers/: __init__.py  advert_banner.py  auth.py  author.py  authors.py  cart.py  category.py  fandom.py  favourite.py  moderation.py  order.py  product.py  super_admin.py  user.py
app/api/routers/utils/: __init__.py  docs.py  favicon.py
app/core/: __init__.py  api.py  auth_api.py  database.py  logging.py  media_client.py  redis_client.py  settings.py  super_moderator.py
app/database/: __init__.py  base_model.py  database.py
app/database/mixins/: __init__.py  repr_str_mixin.py  with_id_mixin.py
app/exceptions/: security.py
app/integrations/: vk.py
app/logging/formatters/: __init__.py  base.py  colorised.py
app/media_client/: __init__.py  media_client.py
app/models/: __init__.py  advert_banner.py  cart.py  cart_item.py  category.py  fandom.py  favourite_author.py  favourite_product.py  inventory.py  order.py  order_item.py  product.py  product_alternatives.py  product_image.py  product_moderation.py  review.py  seller_card.py  seller_card_moderation.py  subcategory.py  user.py  user_settings.py  vk_id_mapping.py
app/repositories/: advert_banner.py  cart.py  category.py  fandom.py  favourite.py  order.py  product.py  seller_card.py  seller_card_moderation.py  subcategory.py  user.py  vk_id_mapping.py
app/repositories/specs/: cart.py  favourite.py  order.py  product.py  user.py
app/schemas/: auth.py  database.py  permissions.py  schemas.py  vk.py
app/schemas/api/: config.py  responses.py
app/services/: __init__.py  advert_banner.py  cart.py  catalog_facet_cache.py  category.py  fandom.py  favourite.py  moderation.py  order.py  product.py  seller_card.py  subcategory.py  super_admin.py  super_moderator_bootstrap.py  user.py  vk_auth.py
app/utils/: exceptions.py  files.py  random_password.py  security.py  slug.py  text.py  vk_username.py
config/: cors.yaml  logging.yaml
database/: env.py
database/versions/: 0f9ec8a99d58_add_unique_constraint_to_cart_item.py  14f9dfdc2655_essage_init.py  1e2695dae2fe_essage_init.py  3c3d9049c996_essage_init.py  63e955a0ce14_essage_init.py  98ca5cc9d646_essage_init.py  a8f3c2e1b904_add_favourite_product_and_author.py  b534512e16a4_initial.py  ba7219f5033e_essage_init.py  c4a7e2f91b03_add_user_delivery_profile_fields.py  d36b4ff05302_essage_init.py  d8f1a2b3c4e5_add_order_payment_and_delivery.py  da7ec2184c9d_essage_init.py  dc649231b173_essage_init.py  e9a1b2c3d4f5_add_order_created_at.py  f1a2b3c4d5e6_add_product_categories.py  g2b3c4d5e6f7_categories_and_subcategories.py  h3c4d5e6f7a8_add_fandom.py  i4d5e6f7a8b9_add_created_at_fields.py  j5e6f7a8b9c0_add_seller_card_moderation.py  k6g7h8i9j0k1_add_vk_id_mapping.py
jwt_keys/: private.pem  public.pem
test/: test_example.py
