# =============================================================================
# 🛠️  pyproject.toml
# =============================================================================
# Modern Python project configuration using Poetry.
# Integrates ruff, pytest, alembic, and pre-commit for development.
# =============================================================================
# Project metadata and dependencies managed by Poetry.
# Tools: ruff (linting), black (formatting), pytest (testing), alembic (DB).
# =============================================================================


[project]
name = "sozvezdie-backend-server"
version = "2.0.0"
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "alembic-postgresql-enum (>=1.8.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "python-multipart (>=0.0.28,<0.0.29)",
]

[tool.poetry]
packages = [{ include = "app" }]

# No scripts or URLs for now
# classifiers = []  # Optional: add if publishing to PyPI


# =============================================================================
# 🧩 Development Dependencies (dev-only)
# =============================================================================
# Tools for linting, testing, formatting, and pre-commit hooks.
# Installed via: `poetry install` (with --with dev)
# =============================================================================
[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"          # Fast linter, formatter, import sorter
pytest = "^8.0"          # Testing framework
pre-commit = "^3.7"      # Git hook manager
python-dotenv = "^1.1.1"

[tool.poetry.group.dev]
optional = true


# =============================================================================
# 🚀 Build System (required for Poetry)
# =============================================================================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# =============================================================================
# 🖌️  ruff — Fast Python Linter & Code Quality
# =============================================================================
# Replaces flake8, isort, pyupgrade, and more.
# =============================================================================
[tool.ruff]
# General
src = ["."]      # Root for resolving first-party imports
line-length = 79 # PEP 8 standard

# Linting rules (enable specific rule sets)
lint.select = [
    "E",   # pycodestyle: syntax, indentation, quotes
    "W",   # pycodestyle warnings
    "F",   # pyflakes: unused vars, undefined names
    "I",   # isort: import sorting
    "UP",  # pyupgrade: modernize syntax (e.g., f-strings)
    "A",   # flake8-builtins: avoid shadowing (e.g., list, str)
    "B",   # flake8-bugbear: common bugs (e.g., mutable defaults)
    "C4",  # flake8-comprehensions: better comprehensions
    "SIM", # flake8-simplify: simplify expressions
    "ANN", # annotation warnings
]
ignore = ["ANN101", "ANN102", "ANN204", "F401"]

# Auto-fix safe issues (unused imports, trivial simplifications)
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude files/dirs
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".venv",
    "venv",
    "env",
    "migrations",
    "migration",
    "__init__.py",
    "README.md",
    "./database/versions",
]

# Per-file ignores (e.g., relaxed rules in tests)
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN201", # Missing return type (top-level function)
    "ANN204", # Missing return type (method)
    "ANN205", # Missing return type (coroutine)
    "ANN206", # Missing return type (async method)
    "ANN001", # Missing type annotation for *args
    "ANN002", # Missing type annotation for **kwargs
    "S101",   # Use of `assert` (allowed in tests)
    "E501",   # Line too long (handled by black/ruff line-length)
]


# Import sorting (isort-style)
[tool.ruff.lint.isort]
known-first-party = ["app"] # ← Replace with your actual package name


# =============================================================================
# 🧪 pytest — Testing Framework
# =============================================================================
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]        # Where to look for tests
python_files = ["test_*.py"] # Test file pattern
pythonpath = ["."]           # Add root to Python path
addopts = "-v -x --tb=short" # Verbose, stop on first fail, short traceback
# addopts = "-v --cov=app --cov-report=html"  # Uncomment for coverage


# =============================================================================
# 🛠️ alembic — Database Migrations
# =============================================================================
[tool.alembic]
script_location = "database"  # Folder with migration scripts
prepend_sys_path = "."        # Add project root to sys.path
version_path_separator = "os" # Use OS-specific separator (e.g., '/' or '\')
